--- a/src/index.html
+++ b/src/index.html
@@ -1,9 +1,19 @@
-<!DOCTYPE html>
+<<!DOCTYPE html>
 <html lang="en-US">
 <head>
-  <title></title>
+  <title>DnD Monsters</title>
 </head>
 <body>
-  
+  <div class="container">
+    <form> 
+             
+      <label for="challenge_rating">Put in character strength</label>
+      <input type="number" id = "challenge_rating">
+
+      <button class="btn-success" id="character_btn">submit</button>
+    </form>
+    <div class="showcharacters"></div>
+    <div class="showErrors"></div>
+  </div>
 </body>
 </html>
