--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,8 @@
 </head>
 <body>
   <div class="container">
-    <form> 
-             
+    <form id="formOne"> 
+
       <label for="challenge_rating">Put in character strength</label>
       <input type="number" id = "challenge_rating">
 
