fix getMonsters function
Co-authored-by: Wajma Niazi <w1niazi@hotmail.com>
Co-authored-by: Amber Wilwand <amoothenielson@gmail.com>

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
       <label for="challenge_rating">Put in character strength</label>
       <input type="number" id = "challenge_rating">
 
-      <button class="btn-success" id="character_btn">submit</button>
+      <button type="button" class="btn-success" id="character_btn">submit</button>
     </form>
     <div class="showcharacters"></div>
     <div class="showErrors"></div>
